API hooks for movement and screen pages